force-app/main/default/objects/Project_Task__c/fields/Estimate__c.field-meta.xml
<CustomField>
    <fullName>Estimate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Estimate, h</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>