force-app/main/default/objects/Project_Task__c/fields/Time_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Time_Remaining__c</fullName>
    <formula>Estimate__c -  Total_Time_Spent_h__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>