force-app/main/default/objects/Project_Task__c/fields/Total_Time_Spent_h__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Spent_h__c</fullName>
    <label>Total Time Spent, h</label>
    <summarizedField>Time_Entry__c.Time_Spent__c</summarizedField>
    <summaryForeignKey>Time_Entry__c.Project_Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>